Add deletion logic
